--- a/servicos.html
+++ b/servicos.html
@@ -25,16 +25,16 @@
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
-                        <li class="nav-item ">
+                        <li class="nav-item mb-3">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item mb-3">
                             <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item mb-3">
                             <a class="nav-link " href="produtos.html">Produtos</a>
                         </li>
-                        <li class="nav-item mb-2">
+                        <li class="nav-item">
                             <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                     </ul>
@@ -132,16 +132,13 @@
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Teclados de Membrana</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis Frontais</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas</a>
-                    </p>
-                    <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Telas</a>
+                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Etiquetas</a>
                     </p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 contato">
