--- a/produtos.html
+++ b/produtos.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <!--FIM NAVBAR-->
-    <!--INICIO SECTION SERVIÇOS INICIAL-->
+    <!--INICIO SECTION PRODUTOS INICIAL-->
     <section class="inicial-produtos d-flex align-items-center overflow-hidden">
         <div class="container">
             <div class="row">
@@ -54,18 +54,17 @@
             </div>
         </div>
     </section>
-    <!--FIM SECTION SERVIÇOS INICIAL-->
-    <!--INICIO SECTION SERVIÇOS SECUNDARIA-->
+    <!--FIM SECTION PRODUTOS INICIAL-->
+    <!--INICIO SECTION PRODUTOS SECUNDARIA-->
     <section id="section-produtos" class="secundaria-home overflow-hidden">
         <div class="container container-servicos">
             <div class="row justify-content-around">
                 <div class="col-md-12 mb-5">
-                    <h2 class="text-white mb-2 bg-primary p-3">Teclado de Membrana</h2>
+                    <h2 class="text-white mb-2 bg-primary p-2">Teclados de Membrana</h2>
                 </div>
                 <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
                     <div class="produtos-content img-fluid">
                         <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
-
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
@@ -73,11 +72,37 @@
 
                 </div>
             </div>
+            <div class="row justify-content-around">
+                <div class="col-md-12 mb-5">
+                    <h2 class="text-white mb-2 bg-primary p-2">Painéis Frontais</h2>
+                </div>
+                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
+                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
+                </div>
+                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
+                    <div class="produtos-content img-fluid">
+                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-around">
+                <div class="col-md-12 mb-5">
+                    <h2 class="text-white mb-2 bg-primary p-2">Etiquetas</h2>
+                </div>
+                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
+                    <div class="produtos-content img-fluid">
+                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
+                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
+                </div>
+            </div>
         </div>
 
     </section>
-    <!--FIM SECTION SERVIÇOS SECUNDARIA-->
-    <!--INICIO SECTION SERVIÇOS EXPLICATIVO-->
+    <!--FIM SECTION PRODUTOS SECUNDARIA-->
+    <!--INICIO SECTION PRODUTOS EXPLICATIVO-->
     <section id="servicos-exp">
         <div class="container">
             <div class="row justify-content-evenly">
@@ -101,7 +126,7 @@
         <br>
         <h4 class="mt-5 text-center text-danger p-4 bg-body">"Entre em contato conosco e tire todas as suas dúvidas."</h4>
     </section>
-    <!--FIM SECTION SERVIÇOS EXPLICATIVO-->
+    <!--FIM SECTION PRODUTOS EXPLICATIVO-->
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
