--- a/produtos.html
+++ b/produtos.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
                     <div class="produtos-content img-fluid">
-                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                        <img src="assets/img/jpg/membrana.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
                     <div class="produtos-content img-fluid">
-                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                        <img src="assets/img/jpg/painel.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
                     <div class="produtos-content img-fluid">
-                        <img src="assets/img/slider/sld-1.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                        <img src="assets/img/jpg/etiqueta.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
@@ -102,31 +102,7 @@
 
     </section>
     <!--FIM SECTION PRODUTOS SECUNDARIA-->
-    <!--INICIO SECTION PRODUTOS EXPLICATIVO-->
-    <section id="servicos-exp">
-        <div class="container">
-            <div class="row justify-content-evenly">
-                <div class="col-lg-3 col-md-12 mt-5 container-content-exp">
-                    <h3 class="text-warning mt-5">Desenvolvimento</h3>
-                    <p class="text-white mt-4 text-center">Desenvolvemos o seu produto conforme a sua necessidades, respeitando o DNA da sua empresa. Assim garantimos a sua satisfição do inicio ao fim.
-                    </p>
-                </div>
-                <div class="col-lg-3 col-md-12 container-content-exp">
-                    <h3 class="text-warning mt-5">Impressão</h3>
-                    <p class="text-white mt-4 text-center">No Silk-Screen conseguimos dar vida aos seus projetos. Tudo com a maior eficiência e qualidade. Os nossos profissionais são altamente qualificados, assim garantimos o melhor resultado final.
-                    </p>
-                </div>
-                <div class="col-lg-3 col-md-12 mt-5 container-content-exp">
-                    <h3 class="text-warning mt-5">Acabamento</h3>
-                    <p class="text-white mt-4 text-center">Montamos e finalizamos os nossos produtos, de acordo com a necessidade dos nossos clientes. Adesivamos,montamos, estampamos e testamos todos os nossos produtos.</p>
-                </div>
-            </div>
 
-        </div>
-        <br>
-        <h4 class="mt-5 text-center text-danger p-4 bg-body">"Entre em contato conosco e tire todas as suas dúvidas."</h4>
-    </section>
-    <!--FIM SECTION PRODUTOS EXPLICATIVO-->
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
