--- a/index.html
+++ b/index.html
@@ -212,32 +212,30 @@
     <!--FIM SECTION HOME SECUNDARIA-->
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
-        <div class="container text-center text-md-left ">
-
+        <div class="container text-center text-md-left">
             <div class="row text-center text-md-left ">
-
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
-                    <a href="# ">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
+                    <a href="#">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="text-center">Somos especialista em impressão Serigráfica e Silk-Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
+                    <p>Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
-                <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Teclados de Membrana</a>
+                        <a class="text-white" href="produtos.html">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Paineis Frontais</a>
+                        <a class="text-white " href="produtos.html">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="produtos.html">Etiquetas</a>
+                        <a class="text-white" href="produtos.html">Etiquetas</a>
                     </p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 contato">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="contato.html">
                         <p class="text-white">
@@ -245,8 +243,8 @@
                         </p>
                     </a>
                     <a href="contato.html">
-                        <p class="text-white p-mail">
-                            <i class="bi bi-envelope">&nbsp;</i><span class="email"> dmdmembranas@gmail.com</span>
+                        <p class="text-white">
+                            <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
