--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="./assets/css/main.css">
-
     <title>DMD - Teclados de membrana</title>
+    <!-- Descrição -->
+    <meta name="description" content="Tudo o que você precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:site_name" content="DMD - Teclados de Membrana">
+    <meta property="og:title" content="DMD Teclados de Membrana | Olá sejam bem vindos ao site da DMD Membranas, aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
+    <meta property="og:description" content="Aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas, sinta-se à vontande para estar entrando em contato conosco, será um prazer atender a sua necessidade.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dmdmembranas.com.br">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="assets/img/png/logodaniel.webp">
 </head>
 
 <body>
@@ -242,7 +249,7 @@
                             <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html">
+                    <a href="contato.html" style="width: 100%;">
                         <p class="text-white">
                             <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
