--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="assets/img/favicon/favicon.ico">
+
+    <link rel="manifest" href="assets/js/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -13,15 +20,15 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <title>DMD - Teclados de membrana</title>
     <!-- Descrição -->
+    <link rel="canonical" href="https://dmdmembranas.com.br/" />
     <meta name="description" content="Tudo o que você precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="DMD - Teclados de Membrana">
     <meta property="og:title" content="DMD Teclados de Membrana | Olá sejam bem vindos ao site da DMD Membranas, aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas.">
     <meta property="og:description" content="Aqui você vai encontara tudo o que precisa em impressão Silk Screen, teclados de membeana, painéis forntais e etiquetas técnicas, sinta-se à vontande para estar entrando em contato conosco, será um prazer atender a sua necessidade.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://dmdmembranas.com.br">
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/png/logodaniel.webp">
+    <meta property="og:url" content="https://dmdmembranas.com.br/">
+    <meta property="og:site_name" content="DMD - Membranas" />
 </head>
 
 <body>
@@ -228,7 +235,7 @@
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
-                    <p>Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
@@ -249,8 +256,8 @@
                             <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html" style="width: 100%;">
-                        <p class="text-white">
+                    <a href="contato.html">
+                        <p class="text-white w-100">
                             <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
