--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/img/favicon/favicon.ico">
-
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
     <link rel="manifest" href="assets/js/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
@@ -257,7 +255,7 @@
                         </p>
                     </a>
                     <a href="contato.html">
-                        <p class="text-white w-100">
+                        <p class="text-danger w-100">
                             <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
