--- a/index.html
+++ b/index.html
@@ -251,12 +251,12 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="contato.html">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
+                            <i class="bi bi-whatsapp"> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
                     <a href="contato.html">
-                        <p class="text-danger w-100">
-                            <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
+                        <p class="text-primary w-100">
+                            <i class="bi bi-envelope"></i><span style="font-size: 14px;">&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
