ajustando o link email do footer

--- a/index.html
+++ b/index.html
@@ -255,19 +255,19 @@
                         </p>
                     </a>
                     <a href="contato.html">
-                        <p class="text-primary w-100">
-                            <i class="bi bi-envelope"></i><span style="font-size: 14px;">&nbsp; dmdmembranas@gmail.com</span>
+                        <p class="text-white w-100">
+                            <i class="bi bi-envelope"> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="text-primary text-center div-footer-bottom">D<span class="text-danger">M</span>D &copy; 2022 <span>&nbsp;/ Todos os direitos reservados.</span></div>
+    <div class="text-primary text-center div-footer-bottom ">D<span class="text-danger ">M</span>D &copy; 2022 <span>&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js " integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p " crossorigin="anonymous "></script>
+    <script src="assets/js/bootstrap.bundle.min.js "></script>
     <script src="./assets/js/main.js "></script>
 </body>
 
