--- a/produtos.html
+++ b/produtos.html
@@ -105,52 +105,50 @@
 
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
-        <div class="container text-center text-md-left ">
-
+        <div class="container text-center text-md-left">
             <div class="row text-center text-md-left ">
-
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
-                    <a href="# ">
-                        <img src="../assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
+                    <a href="#">
+                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="text-center">Somos especialista em impressão Serigráfica e Silk-Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
+                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
-                <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Teclados de Membrana</a>
+                        <a class="text-white" href="produtos.html">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis Frontais</a>
+                        <a class="text-white " href="produtos.html">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas</a>
+                        <a class="text-white" href="produtos.html">Etiquetas</a>
                     </p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 contato">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="#">
+                    <a href="contato.html">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
+                            <i class="bi bi-whatsapp"> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="#">
-                        <p class="text-white p-mail">
-                            <i class="bi bi-envelope">&nbsp;</i><span class="email"> dmdmembranas@gmail.com</span>
+                    <a href="contato.html">
+                        <p class="text-white w-100">
+                            <i class="bi bi-envelope"> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="text-primary text-center div-footer-bottom">D<span class="text-danger">M</span>D &copy; 2022 <span>&nbsp;/ Todos os direitos reservados.</span></div>
+    <div class="text-primary text-center div-footer-bottom ">D<span class="text-danger ">M</span>D &copy; 2022 <span>&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
-
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js " integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p " crossorigin="anonymous "></script>
+    <script src="assets/js/bootstrap.bundle.min.js "></script>
     <script src="./assets/js/main.js "></script>
 </body>
 
