finalizado a página de produtos

--- a/produtos.html
+++ b/produtos.html
@@ -56,88 +56,102 @@
     </section>
     <!--FIM SECTION PRODUTOS INICIAL-->
     <!--INICIO SECTION PRODUTOS SECUNDARIA-->
-    <section id="section-produtos" class="secundaria-home overflow-hidden">
-        <div class="container container-servicos">
-            <div class="row justify-content-around">
-                <div class="col-md-12 mb-5">
-                    <h2 class="text-white mb-2 bg-primary p-2">Teclados de Membrana</h2>
-                </div>
-                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
-                    <div class="produtos-content img-fluid">
-                        <img src="assets/img/jpg/membrana.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+    <section id="section-produtos" class=" overflow-hidden">
+        <div class="container ">
+            <div class="row container-content-produtos">
+                <div class="row justify-content-around mt-5">
+                    <div class="col-md-12 mb-5">
+                        <h2 class="text-white mb-2 bg-primary p-2">Teclados de Membrana</h2>
+                    </div>
+                    <div class="col-lg-5 col-md-12 mt-5 mt-sm-0 mb-5 ">
+                        <div class="produtos-content">
+                            <img src="assets/img/jpg/membrana.jpg" class="img-fluid rounded-3" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; ">Confeccionados em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Fabricados em impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.
+                        </p>
+                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
-                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
 
-                </div>
-            </div>
-            <div class="row justify-content-around mt-5">
-                <div class="col-md-12 mb-5">
-                    <h2 class="text-white mb-2 bg-primary p-2">Painéis Frontais</h2>
-                </div>
-                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
-                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
-                </div>
-                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
-                    <div class="produtos-content img-fluid">
-                        <img src="assets/img/jpg/painel.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+                <div class="row justify-content-around mt-5 ">
+                    <div class="col-md-12 mb-5 ">
+                        <h2 class="text-white mb-2 bg-primary p-2 ">Painéis Frontais</h2>
+                    </div>
+                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; ">Os Painéis Frontais são produzidos com matéria prima de alta qualidade, e rigoroso controle de qualidade. São oferecidos com vários tipos de acabamento como:
+
+                            <div class="container-fluid text-start text-dark " style="font-size: 18px; ">
+                                <span>* Visores transparentes ou coloridos.</span><br>
+                                <span>* Texturização seletiva.</span><br>
+                                <span>* Impressão em quadricomia.</span><br>
+                                <span>* Alto relevo e molduras.</span>
+                            </div>
+                        </p>
+                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
+                    </div>
+                    <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
+                        <div class="produtos-content ">
+                            <img src="assets/img/jpg/painel.jpg " class="img-fluid rounded-3" alt=" ">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row justify-content-around mt-5">
-                <div class="col-md-12 mb-5">
-                    <h2 class="text-white mb-2 bg-primary p-2">Etiquetas</h2>
-                </div>
-                <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center">
-                    <div class="produtos-content img-fluid">
-                        <img src="assets/img/jpg/etiqueta.jpg" style="width: 500px; margin: 0 auto; border-radius: 15px;" alt="">
+
+                <div class="row justify-content-around mt-5 ">
+                    <div class="col-md-12 mb-5 ">
+                        <h2 class="text-white mb-2 bg-primary p-2 ">Etiquetas</h2>
                     </div>
-                </div>
-                <div class="col-lg-7 col-md-12" style="width: 600px; ; margin: 0 auto; align-self: center;">
-                    <p style="width: 100%;font-size: 18px;">Produzidos em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Confeccionado com impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.</p>
+                    <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
+                        <div class="produtos-content ">
+                            <img src="assets/img/jpg/etiqueta.jpg " class="img-fluid rounded-3" alt=" ">
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
+                        <p style="width: 100%;font-size: 18px;text-align: start; ">As etiquetas técnicas são peças com informações sobre operação e segurança, especificações técnicas, indicação de entradas e saídas dos equipamentos.</p>
+                        <a href="" class="btn btn-outline-danger">Saiba Mais</a>
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
     <!--FIM SECTION PRODUTOS SECUNDARIA-->
 
     <!--INICIO FOOTER-->
-    <footer class="footer text-white pt-5 pb-4">
-        <div class="container text-center text-md-left">
+    <footer class="footer text-white pt-5 pb-4 ">
+        <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
-                    <a href="#">
+                    <a href="# ">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
-                    <p class="w-75">Somos especialista em impressão Serigráfica e Silk Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
+                    <p class="w-75 ">Somos especialista em impressão Serigráfica e Silk Screen, na fabricação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white" href="produtos.html">Teclados de Membrana</a>
+                        <a class="text-white " href="produtos.html ">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html">Paineis Frontais</a>
+                        <a class="text-white " href="produtos.html ">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white" href="produtos.html">Etiquetas</a>
+                        <a class="text-white " href="produtos.html ">Etiquetas</a>
                     </p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="contato.html">
-                        <p class="text-white">
-                            <i class="bi bi-whatsapp"> </i>&nbsp;<span> (11) 96258-4708</span>
+                    <a href="contato.html ">
+                        <p class="text-white ">
+                            <i class="bi bi-whatsapp "> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html">
-                        <p class="text-white w-100">
-                            <i class="bi bi-envelope"> </i><span>&nbsp; dmdmembranas@gmail.com</span>
+                    <a href="contato.html ">
+                        <p class="text-white w-100 ">
+                            <i class="bi bi-envelope "> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
